--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
 
     <!-- Page Title-->
-    <title>Axio - Coming Soon Template</title>
+    <title>BrandoBytes - Coming Soon</title>
 
     <!-- Meta Tags-->
     <meta name="description" content="Axio - awesome coming soon template to kick-start your project">
@@ -92,7 +92,7 @@
 
                         <!-- Logo Start -->
                         <div class="logo" style="margin-top: -200px !important; margin-left: -200px !important;">
-                            <img src="/Blue Flat Illustrative Finance Company Logo (1).svg" alt="Axio - awesome coming soon template to kick-start your project">
+                            <img src="/ourlogo.svg" alt="BB">
                         </div>
                         <!-- Logo End -->
 
