--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 
                         <!-- Logo Start -->
                         <div class="logo" style="margin-top: -200px !important; margin-left: -200px !important;">
-                            <img src="/ourlogo.svg" alt="BB">
+                            <img src="/img/ourlogo.svg" alt="BB">
                         </div>
                         <!-- Logo End -->
 
