--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
     <!-- Template Favicon & Icons Start -->
-    <link rel="icon" href="img/favicon/color-3/favicon.ico" sizes="any">
-    <link rel="icon" href="img/favicon/color-3/icon.svg" type="image/svg+xml">
-    <link rel="apple-touch-icon" href="img/favicon/color-3/apple-touch-icon.png">
+    <link rel="icon" href="img/ourlogo.svg" sizes="any">
+    <link rel="icon" href="img/ourlogo.svg" type="image/svg+xml">
+    <link rel="apple-touch-icon" href="img/ourlogo.png">
     <link rel="manifest" href="img/favicon/color-3/manifest.webmanifest">
     <!-- Template Favicon & Icons End -->
 
