--- a/index.html
+++ b/index.html
@@ -171,31 +171,28 @@
                     <!-- Aside Content End -->
 
                     <!-- Aside Socials Start -->
-                    <div class="aside__socials">
+                 <div class="aside__socials">
                         <ul class="socials">
                             <li>
-                                <a href="https://www.instagram.com/" target="_blank">
+                                <a href="https://www.instagram.com/brandobytesofficial/?igsh=MWdwbTBwYXFhMXQyaA%3D%3D" target="_blank">
                     <i class="fa-brands fa-instagram"></i>
                   </a>
                             </li>
-                            <li>
-                                <a href="https://dribbble.com/" target="_blank">
-                    <i class="fa-brands fa-dribbble"></i>
-                  </a>
-                            </li>
-                            <li>
-                                <a href="https://www.behance.net/" target="_blank">
-                    <i class="fa-brands fa-behance"></i>
-                  </a>
-                            </li>
+                        
+                         
                             <li>
                                 <a href="https://www.facebook.com/" target="_blank">
                     <i class="fa-brands fa-facebook-f"></i>
                   </a>
                             </li>
                             <li>
-                                <a href="https://twitter.com/" target="_blank">
+                                <a href="https://x.com/BrandoBytes?t=f7pH31j8izelbL_0DWpiXA&s=09" target="_blank">
                     <i class="fa-brands fa-twitter"></i>
+                  </a>
+                            </li>
+                            <li>
+                                <a href="https://www.linkedin.com/company/brando-bytes/" target="_blank">
+                    <i class="fa-brands fa-linkedin"></i>
                   </a>
                             </li>
 
